[package]
name = "museum"
version = "0.1.0"
edition = "2024"

[features]
gui = ["eframe", "rfd"]
cli = ["clap"]

[dependencies]
clap = { version = "4.5.38", features = ["derive"], optional = true }
eframe = { version = "0.31.1", optional = true }
rfd = { version = "0.15.3", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
